--- a/related.html
+++ b/related.html
@@ -3,73 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction</title>
+    <title>Mechanical Resources - Vanguri Madhu</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #282c34;
+            color: #ffffff;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: #282c34;
-            color: #61dafb;
+            min-height: 100vh;
+        }
+
+        /* Header Section */
+        header {
+            padding: 40px 20px;
             text-align: center;
-            overflow: hidden;
-        }
-        .banner {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .banner h1 {
-            font-size: 3em;
-            animation: slideIn 1.5s ease-in-out;
-            margin: 0;
-            padding: 20px;
-            background: rgba(40, 44, 52, 0.9);
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            color: #ffffff;
-        }
-        @keyframes slideIn {
-            from { transform: translateY(-100%); }
-            to { transform: translateY(0); }
-        }
-        footer {
-            width: 100%;
-            padding: 15px;
             background: #20232a;
-            color: #61dafb;
-            text-align: center;
-            font-size: 1em;
+            border-bottom: 3px solid #61dafb;
         }
-        @media (max-width: 600px) {
-            .banner h1 {
-                font-size: 2em;
-            }
-            footer {
-                font-size: 0.8em;
-            }
+
+        h1 { margin: 0; color: #61dafb; font-size: 2.5em; }
+        p { color: #abb2bf; margin-top: 10px; }
+
+        /* PDF Grid Layout */
+        .container {
+            flex: 1;
+            max-width: 1000px;
+            margin: 40px auto;
+            padding: 0 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+        }
+
+        .pdf-card {
+            background: #353b45;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            transition: transform 0.3s ease;
+            border: 1px solid #4b5263;
+        }
+
+        .pdf-card:hover {
+            transform: translateY(-5px);
+            border-color: #61dafb;
+        }
+
+        .pdf-icon {
+            font-size: 40px;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        .download-btn {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background: #61dafb;
+            color: #282c34;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .download-btn:hover {
+            background: #ffffff;
+        }
+
+        footer {
+            padding: 20px;
+            background: #20232a;
+            text-align: center;
+            color: #61dafb;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <div class="banner">
-        <h1>Our Team is Currently Enhancing This Page</h1>
+
+    <header>
+        <h1>Mechanical Engineering Portal</h1>
+        <p>Download Technical Manuals and Research PDFs</p>
+    </header>
+
+    <div class="container">
+        <div class="pdf-card">
+            <span class="pdf-icon">⚙️</span>
+            <h3>Thermodynamics Notes</h3>
+            <p>Comprehensive guide on heat transfer and laws.</p>
+            <a href="pdfs/thermodynamics.pdf" class="download-btn" download>Download PDF</a>
+        </div>
+
+        <div class="pdf-card">
+            <span class="pdf-icon">🚜</span>
+            <h3>Machine Design</h3>
+            <p>Standard practices for component design.</p>
+            <a href="pdfs/machine-design.pdf" class="download-btn" download>Download PDF</a>
+        </div>
+
+        <div class="pdf-card">
+            <span class="pdf-icon">🔧</span>
+            <h3>Fluid Mechanics</h3>
+            <p>Detailed study on fluid dynamics and statics.</p>
+            <a href="pdfs/fluid-mechanics.pdf" class="download-btn" download>Download PDF</a>
+        </div>
     </div>
+
     <footer>
         DEVELOPED BY VANGURI MADHU
     </footer>
-    <script>
-        // Add any JavaScript you need here
-    </script>
+
 </body>
 </html>
