--- a/related.html
+++ b/related.html
@@ -74,6 +74,13 @@
             background: #ffffff;
         }
 
+        /* Add this to your <style> section */
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
         footer {
             padding: 20px;
             background: #20232a;
