--- a/index.html
+++ b/index.html
@@ -3,11 +3,192 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mechanical Engineering</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/script.js"></script>
+    <title>Mechanical Engineering Resource Hub</title>
+    <style>
+        :root {
+            --primary-bg: #1a1d23;
+            --secondary-bg: #282c34;
+            --accent-color: #61dafb;
+            --text-main: #ffffff;
+            --text-dim: #abb2bf;
+            --card-bg: rgba(255, 255, 255, 0.05);
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--primary-bg);
+            color: var(--text-main);
+            line-height: 1.6;
+        }
+
+        /* --- Header & Navigation --- */
+        header {
+            background: var(--secondary-bg);
+            padding: 1rem 5%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: var(--accent-color);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 20px;
+            margin: 0;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: var(--text-main);
+            font-weight: 500;
+            transition: 0.3s;
+        }
+
+        .nav-links a:hover { color: var(--accent-color); }
+
+        .menu-toggle { display: none; cursor: pointer; flex-direction: column; gap: 5px; }
+        .bar { width: 25px; height: 3px; background: white; border-radius: 2px; }
+
+        /* --- Layout --- */
+        main {
+            display: flex;
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
+            gap: 30px;
+        }
+
+        .sidebar {
+            flex: 1;
+            min-width: 250px;
+            background: var(--secondary-bg);
+            padding: 20px;
+            border-radius: 12px;
+            height: fit-content;
+        }
+
+        .search-bar input {
+            width: 100%;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #3e4451;
+            background: #1a1d23;
+            color: white;
+            box-sizing: border-box;
+            outline: none;
+        }
+
+        .search-bar input:focus { border-color: var(--accent-color); }
+
+        .content { flex: 3; }
+
+        /* --- Resource Cards --- */
+        .resource-section {
+            background: var(--card-bg);
+            border: 1px solid rgba(255,255,255,0.1);
+            padding: 25px;
+            border-radius: 15px;
+            margin-bottom: 20px;
+            transition: 0.3s;
+        }
+
+        .resource-section:hover {
+            transform: translateY(-5px);
+            border-color: var(--accent-color);
+            background: rgba(97, 218, 251, 0.05);
+        }
+
+        .download-btn {
+            display: inline-block;
+            background: var(--accent-color);
+            color: #20232a;
+            padding: 12px 24px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: bold;
+            margin-top: 10px;
+            transition: 0.3s;
+        }
+
+        .download-btn:hover { background: white; transform: scale(1.05); }
+
+        /* --- Footer --- */
+        footer {
+            background: var(--secondary-bg);
+            text-align: center;
+            padding: 40px 20px;
+            margin-top: 50px;
+            border-top: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .social-media a { color: var(--accent-color); text-decoration: none; margin: 0 10px; }
+
+        /* --- Popup --- */
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.85);
+            justify-content: center;
+            align-items: center;
+            z-index: 2000;
+        }
+
+        .popup-content {
+            background: var(--secondary-bg);
+            padding: 40px;
+            border-radius: 20px;
+            text-align: center;
+            border: 2px solid var(--accent-color);
+            position: relative;
+            max-width: 400px;
+            margin: 20px;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 15px; right: 20px;
+            font-size: 28px;
+            cursor: pointer;
+            color: var(--text-dim);
+        }
+
+        /* --- Mobile Responsiveness --- */
+        @media (max-width: 768px) {
+            main { flex-direction: column; }
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 70px; left: 0; width: 100%;
+                background: var(--secondary-bg);
+                padding: 20px;
+                text-align: center;
+                box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+            }
+            .nav-links.active { display: flex; }
+            .menu-toggle { display: flex; }
+            .sidebar { order: 2; }
+            .content { order: 1; }
+        }
+    </style>
 </head>
 <body>
+
     <header>
         <div class="logo">Mechanical Notes</div>
         <nav>
@@ -28,22 +209,21 @@
     <main>
         <aside class="sidebar">
             <div class="search-bar">
-                <input type="text" placeholder="Search...">
+                <input type="text" placeholder="Search resources...">
             </div>
             <div class="quick-links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">Popular Resource 1</a></li>
-                    <li><a href="#">Popular Resource 2</a></li>
-                    <li><a href="#">Recent Upload 1</a></li>
-                    <li><a href="#">Recent Upload 2</a></li>
+                <h3 style="color: var(--accent-color);">Quick Links</h3>
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 10px;"><a href="#" style="color: var(--text-dim); text-decoration: none;">Popular Resource 1</a></li>
+                    <li style="margin-bottom: 10px;"><a href="#" style="color: var(--text-dim); text-decoration: none;">Popular Resource 2</a></li>
+                    <li style="margin-bottom: 10px;"><a href="#" style="color: var(--text-dim); text-decoration: none;">Recent Upload 1</a></li>
                 </ul>
             </div>
         </aside>
 
         <section class="content">
-            <h1>Welcome to the Mechanical Engineering Resource Hub</h1>
-            <p>Your one-stop platform for all mechanical engineering resources.</p>
+            <h1>Welcome to the Resource Hub</h1>
+            <p style="color: var(--text-dim);">Your one-stop platform for all mechanical engineering resources.</p>
 
             <div class="resource-section">
                 <h2>Class Notes</h2>
@@ -73,21 +253,53 @@
 
     <footer>
         <div class="footer-content">
-            <p>Contact us at: <a href="mailto:vangurimadhu13@gmail.com">vangurimadhu13@gmail.com</a></p>
+            <p>Contact us at: <a href="mailto:vangurimadhu13@gmail.com" style="color: var(--accent-color); text-decoration: none;">vangurimadhu13@gmail.com</a></p>
             <div class="social-media">
-                <a href="https://www.instagram.com/invites/contact/?igsh=nd0vdl0vjvow&utm_content=ozrpn56">Facebook</a> | <a href="https://www.instagram.com/invites/contact/?igsh=nd0vdl0vjvow&utm_content=ozrpn56">Instagram</a> | <a href="https://www.instagram.com/invites/contact/?igsh=nd0vdl0vjvow&utm_content=ozrpn56">LinkedIn</a>
+                <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">LinkedIn</a>
             </div>
-            <p>&copy; 2024 Mechanical Engineering Resource Hub. All rights reserved.</p>
+            <p style="margin-top: 20px; font-size: 0.8rem; opacity: 0.6;">&copy; 2024 Mechanical Engineering Resource Hub. All rights reserved.</p>
+            <p style="font-size: 0.8rem; opacity: 0.6;">DEVELOPED BY VANGURI MADHU</p>
         </div>
     </footer>
 
-    <!-- Pop-up Container -->
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close-btn" id="close-popup">&times;</span>
-            <h2>Important Notice</h2>
-            <p>This site is under maintenance</p>
+            <h2 style="color: var(--accent-color);">Important Notice</h2>
+            <p>Our team is currently enhancing this page to provide better resources.</p>
+            <button onclick="closePopup()" class="download-btn" style="cursor:pointer; border:none;">Got it!</button>
         </div>
     </div>
+
+    <script>
+        // Mobile Menu Toggle
+        const menu = document.querySelector('#mobile-menu');
+        const navLinks = document.querySelector('#nav-links');
+
+        menu.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+
+        // "Show Once" Popup Logic using LocalStorage
+        const popup = document.getElementById('popup');
+        const closeBtn = document.getElementById('close-popup');
+
+        window.onload = function() {
+            // Check if the user has seen the popup before
+            if (!localStorage.getItem('popupShown')) {
+                setTimeout(() => {
+                    popup.style.display = 'flex';
+                }, 1500);
+            }
+        };
+
+        function closePopup() {
+            popup.style.display = 'none';
+            // Set the flag in localStorage so it doesn't show again
+            localStorage.setItem('popupShown', 'true');
+        }
+
+        closeBtn.onclick = closePopup;
+    </script>
 </body>
 </html>
